@@ -61,7 +61,7 @@ printf,1,'linterp LINTERP data /look/up/file'
 printf,1,'polynom POLYNOM data 1.1 2.2 2.2 3.3;4.4 const const'
 printf,1,'bit BIT data 3 4'
 printf,1,'sbit SBIT data 5 6'
-printf,1,'mplex MPLEX sbit data 1 10'
+printf,1,'mplex MPLEX data sbit 1 10'
 printf,1,'mult MULTIPLY data sbit'
 printf,1,'div DIVIDE mult bit'
 printf,1,'recip RECIP div 6.5;4.3'
