@@ -49,8 +49,8 @@ int main(void)
   CHECKI(n, 0);
   CHECKS(E.field, "data");
   CHECKX(E.field_type, GD_MPLEX_ENTRY);
-  CHECKS(E.in_fields[0], "in2");
-  CHECKS(E.in_fields[1], "in1");
+  CHECKS(E.in_fields[0], "in1");
+  CHECKS(E.in_fields[1], "in2");
   CHECKI(E.EN(mplex,count_val), 1);
   CHECKI(E.EN(mplex,count_max), 2);
   gd_free_entry_strings(&E);
